<resources>
    <string name="app_name">My Weather</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_exit">Exit</string>
    <string name="toast_network">Check your internet connection</string>
    <string name="toast_city">There is no such City</string>

    <string name="weather_for_content">Weather:</string>


    <!-- Settings Activity strings -->

    <string name="settings_activity_name">Settings</string>
    <string name="settings_activity_bar">Click to save</string>
    <string name="settings_system">System</string>
    <string name="settings_system_setlang">Language</string>
    <string name="settings_system_setlang_info">Select language for interface</string>
    <string name="settings_service">Service</string>
    <string name="settings_service_setcity">Favorites city</string>
    <string name="settings_service_setcity_info">Add several cities to quickly view the weather information</string>
    <string name="settings_service_setdays">Forecast of weather</string>
    <string name="settings_service_setdays_info">Select a number of days forecast</string>
    <string name="settings_service_settemp">Temperature</string>
    <string name="settings_service_settemp_info">Unit of measurement of temperature</string>
    <string name="settings_service_setrefresh">Refresh data</string>
    <string name="settings_service_setrefresh_info">Refresh an weather data at an application launch</string>

    <string-array name="select_lang">
        <item>Auto</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="select_day">
        <item>1 Day</item>
        <item>3 Days</item>
        <item>5 Days</item>
    </string-array>

    <string-array name="select_temp">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>


    <!-- FavoritesCity Activity strings -->

    <string name="favorites_city_activity_name">Favorites city</string>


    <!-- For data of forecast -->

    <string name="weather_temperature">Temperature:</string>
    <string name="weather_pressure">Pressure:</string>
    <string name="weather_humidity">Humidity:</string>
    <string name="weather_wind">Wind:</string>
    <string name="weather_clouds">Clouds:</string>
    <string name="forecast_is_city">Add a city</string>

    <string-array name="day_time_forecast">
        <item>Midnight</item>
        <item>Night</item>
        <item>Morning</item>
        <item>Morning</item>
        <item>Noon</item>
        <item>Day</item>
        <item>Evening</item>
        <item>Evening</item>
    </string-array>

</resources>
